@@ -15,7 +15,7 @@
  * -------------------------------------------------------------------
 */
 const char *cmdline_cpp(void) {
-return "@(#)$Id: cmdline.cpp,v 1.160.2.7 2003/04/26 15:16:48 pfeffi Exp $"; }
+return "@(#)$Id: cmdline.cpp,v 1.160.2.8 2003/05/17 21:14:19 bdragon Exp $"; }
 
 //#define TRACE
 
@@ -1622,6 +1622,7 @@ static int __parse_argc_argv( int misc_call, int argc, const char *argv[],
             client->blockcount = -1;
         }
       }
+      #if !defined(SINGLE_CRUNCHER_ONLY)
       else if ( strcmp( thisarg, "-numcpu" ) == 0 ) // Override the number of cpus
       {
         if (!argvalue)
@@ -1648,6 +1649,7 @@ static int __parse_argc_argv( int misc_call, int argc, const char *argv[],
           }
         }
       }
+      #endif
       else if ( strcmp( thisarg, "-cktime" ) == 0 || /* obsolete */
                 strcmp( thisarg, "-ckpoint2" ) == 0 || /* obsolete */
                 strcmp( thisarg, "-exitfilechecktime" ) == 0 ) /* obsolete */
